Bug 150502 - CRASH: after clicking between the horizontal and vertical rulers
Summary: CRASH: after clicking between the horizontal and vertical rulers
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2022-08-19 15:13 UTC by phv
Modified: 2022-08-20 05:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
bt with debug symbols (6.91 KB, text/plain)
2022-08-19 17:17 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phv 2022-08-19 15:13:08 UTC
In LibreOfficeDev Draw (7.5), the program crashes everytime I click on what looks like a cross between the horizontal and vertical rulers. There should be no event for left-clicking on this area, when the mouse pointer is not on the rulers.

Rulers have to be displayed in View for this issue to be reproduced. It cannot be reproduced in LibreOffice 7.4.1.
Comment 1 phv 2022-08-19 15:15:57 UTC
This bug also occurs in LibreOffice Impress.
Comment 2 Julien Nabet 2022-08-19 17:17:42 UTC
Created attachment 181888 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2022-08-19 17:18:37 UTC
I confirm I don't reproduce this on LO Debian package 7.4.0.3
Comment 4 Julien Nabet 2022-08-19 17:24:22 UTC
With this straightforward patch, I don't reproduce the crash:
diff --git a/svx/source/sdr/overlay/overlaytools.cxx b/svx/source/sdr/overlay/overlaytools.cxx
index d2f01adaa16c..3bb91506033b 100644
--- a/svx/source/sdr/overlay/overlaytools.cxx
+++ b/svx/source/sdr/overlay/overlaytools.cxx
@@ -236,7 +236,7 @@ sal_uInt32 OverlayStaticRectanglePrimitive::getPrimitive2DID() const
 
             rContainer.push_back(
                 new PolygonMarkerPrimitive2D(
-                    std::move(aPolygon),
+                    aPolygon,
                     getRGBColorA(),
                     getRGBColorB(),
                     getDiscreteDashLength()));


Regression from: a447b5b6d1114111c92e5e3e3f3ae83d4c2f3bca
loplugin:moveit

Noel: any thoughts here? Does the one-line proposed patch seem ok to you?
Comment 5 Noel Grandin 2022-08-19 18:41:24 UTC
Julien, that looks right
Comment 6 Julien Nabet 2022-08-19 18:48:10 UTC
(In reply to Noel Grandin from comment #5)
> Julien, that looks right

Thank you for the quick feedback, I put you in cc of https://gerrit.libreoffice.org/c/core/+/138564 as you may have seen.
Comment 7 Commit Notification 2022-08-20 05:25:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f1c90beafdfd5389e6e22eabca30f9429530ce0

tdf#150502: crash after clicking between the horizontal and vertical rulers

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.