tdf#150502: crash after clicking between the horizontal and vertical rulers

0  0x00007f22e3b294f7 in o3tl::cow_wrapper<ImplB2DPolygon, o3tl::UnsafeRefCountingPolicy>::make_unique() (this=0x7ffc2dcc7640) at include/o3tl/cow_wrapper.hxx:301
1  0x00007f22e3b2a305 in o3tl::cow_wrapper<ImplB2DPolygon, o3tl::UnsafeRefCountingPolicy>::operator*() (this=0x7ffc2dcc7640) at include/o3tl/cow_wrapper.hxx:329
2  0x00007f22e3b18fe5 in basegfx::B2DPolygon::clear() (this=0x7ffc2dcc7640) at basegfx/source/polygon/b2dpolygon.cxx:1433
3  0x00007f22eb42d882 in drawinglayer::primitive2d::OverlayCrosshairPrimitive::create2DDecomposition(drawinglayer::primitive2d::Primitive2DContainer&, drawinglayer::geometry::ViewInformation2D const&) const
   (this=0x55a582f57d40, rContainer=...) at svx/source/sdr/overlay/overlaytools.cxx:244
4  0x00007f22edae9e41 in drawinglayer::primitive2d::BufferedDecompositionPrimitive2D::get2DDecomposition(drawinglayer::primitive2d::Primitive2DDecompositionVisitor&, drawinglayer::geometry::ViewInformation2D const&) const (this=0x55a582f57d40, rVisitor=..., rViewInformation=...) at drawinglayer/source/primitive2d/BufferedDecompositionPrimitive2D.cxx:36
5  0x00007f22e2da32a7 in drawinglayer::primitive2d::ViewportDependentPrimitive2D::get2DDecomposition(drawinglayer::primitive2d::Primitive2DDecompositionVisitor&, drawinglayer::geometry::ViewInformation2D const&) const (this=0x55a582f57d40, rVisitor=..., rViewInformation=...) at drawinglayer/source/primitive2d/primitivetools2d.cxx:70
6  0x00007f22edae80c6 in drawinglayer::primitive2d::BasePrimitive2D::getB2DRange(drawinglayer::geometry::ViewInformation2D const&) const (this=0x55a582f57d40, rViewInformation=...)
    at drawinglayer/source/primitive2d/baseprimitive2d.cxx:73
full bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=181888

Regression from a447b5b6d1114111c92e5e3e3f3ae83d4c2f3bca

Change-Id: Ide5c03124d11ffe02c0510318d2198f25ea645f0